--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -14,6 +14,13 @@
       margin: 0;
       padding: 0;
     }
+
+    li {
+      list-style: none;
+      width: 80%;
+      height: 30px;
+      font-size: 2rem;
+    }
   </style>
 </head>
 
