--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -36,7 +36,7 @@
   <ul>
     {% for task in tasks %}
     <li>{{ task.title }}</li>
-    <input class="form-check-input" type="checkbox" value="{{task.done}}" />
+    <input class="form-check-input" value="{{task.done}}" />
     {% empty %}
     <li>Sem tarefas</li>
     {% endfor %}
